--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
   "dependencies": {
     "express": "^4.21.2",
     "google-translate-api-x": "^10.7.2",
-    "mongoose": "^8.9.6"
+    "mongoose": "^8.9.6",
+    "redis": "^4.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
     "@types/express": "^5.0.0",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^22.13.0",
+    "@types/redis": "^4.0.11",
     "@typescript-eslint/eslint-plugin": "^8.22.0",
     "@typescript-eslint/parser": "^8.22.0",
     "eslint": "^9.19.0",
