--- a/package.json
+++ b/package.json
@@ -12,14 +12,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.21.2",
+    "express-validator": "^7.2.1",
     "google-translate-api-x": "^10.7.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.6",
     "redis": "^4.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.0",
+    "@types/express-validator": "^3.0.2",
+    "@types/jsonwebtoken": "^9.0.8",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^22.13.0",
     "@types/redis": "^4.0.11",
